<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:abdroid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/registerLogo"
                android:layout_width="70dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@drawable/ic_peacoks" />
            <TextView
                android:id="@+id/tvTextRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="#3498DB"
                android:textStyle="bold"
                android:text="Registration Form"
                android:textAlignment="center"
                android:textSize="30sp" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtNameLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Nama"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:hintTextColor="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_people_alt_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="text"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtAddressLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Alamat"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:hintTextColor="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="text"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmailLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Email"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:hintTextColor="#3498DB"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="textEmailAddress"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTelponLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="+62"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_call_24"
            app:hintTextColor="#3498DB"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtHand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="numberSigned"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtUsernameLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Username"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:hintTextColor="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="text"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPasswordLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Password"
            app:boxStrokeColor="#3498DB"
            android:textColorHint="#3498DB"
            app:hintTextColor="#3498DB"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor"
                android:inputType="textPassword"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btnRegisterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="#FFFFFF"
            app:backgroundTint="#3498DB"
            android:text="Register"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="-17dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Already a member?"
                android:textAlignment="center" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/buttonBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="-20dp"
                android:text="Login"
                android:textColor="#3498DB"
                android:textSize="10sp" />
        </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>