...
            android:textColor="@color/SecondaryText"
            android:text="Not a member?"
            android:textAlignment="center" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btnRegister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Register"
            android:textColor="#3498DB"
            android:textSize="10sp" />
...
